# pokecard_sim

./: IMPLEMENTED_CARD_EFFECTS.md  JP_EN_MAPPING.md  README.md  pyproject.toml  requirements.txt
decks/: opponent_stub.yaml  shining_raichu_v1.yaml
docs/: prompt15_finish_review.md
src/oldback_sim/agents/: base.py  heuristic_agent.py  opponent_agent.py  random_agent.py  rl_agent.py  search_agent.py
src/oldback_sim/cards/: card_defs.yaml  card_registry.py  effect_context.py
src/oldback_sim/cards/effects/: __init__.py  energy.py  pokemon.py  trainers.py
src/oldback_sim/engine/: actions.py  observation.py  rng.py  rules.py  setup.py  simulator.py  state.py  zones.py
src/oldback_sim/experiments/: analyze_failures.py  branch_analysis.py  compare_decks.py  evaluate_agents.py  run_simulation.py
src/oldback_sim/learning/: action_encoder.py  dataset_from_logs.py  env.py  evaluate_rl.py  imitation_learning.py  observation_encoder.py  reward.py  train_rl.py
src/oldback_sim/logging_utils/: event_log.py  schemas.py
src/oldback_sim/objectives/: __init__.py  objective_mode.py  scoring.py  shining_raichu_plan.py
tests/: test_deck_loading.py  test_evolution_flow.py  test_objective_mode.py  test_objectives.py  test_prompt15_review_requirements.py  test_prompt5_all_cards.py  test_prompt5_effects.py  test_prompt6_legal_actions.py  test_rng_reproducibility.py  test_simulator_trainer_play.py  test_state_init.py  test_trainer_effects_individual.py
